Java 17 downgrade